fix: Always align alerts text to the left

--- a/src/stylesheets/components/alerts.css
+++ b/src/stylesheets/components/alerts.css
@@ -14,6 +14,8 @@
     padding: var(--alert-padding);
     padding-left: calc(var(--alert-icon-zone) + 2 * var(--alert-icon-padding));
 
+    text-align: left;
+
     background-color: var(--color-background);
     border: 1px solid var(--alert-icon-background);
     border-radius: var(--border-radius);
